kubernetes/apps/external-services/influxdb/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8086
      targetPort: http
  type: ClusterIP
