kubernetes/apps/external-services/influxdb/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb
  namespace: external-services
  labels:
    app.kubernetes.io/name: influxdb
  annotations:
    hajimari.io/enable: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: "traefik"
  rules:
    - host: "influxdb.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: influxdb
                port:
                  number: 8086
  tls:
    - secretName: "${SECRET_DOMAIN/./-}-tls"
